--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,1 +1,18 @@
 /* app css stylesheet */
+
+.predicates {
+  position: absolute;
+  width: 9em;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.phones {
+  margin-left: 11em;
+  padding: 0;
+}
+
+.phones li {
+  margin-bottom: 2em;
+}
