step-7 $route and app partitioning - Introduce the [$route] service which allows binding URLs for deep-linking with   views   - Create PhoneCatCtrl which governs the entire app and contains $route     configuration   - Map `/phones' to PhoneListCtrl and partails/phones-list.html   - Map `/phones/<phone-id>' to PhoneDetailCtrl and partails/phones-detail.html   - Copy deep linking parameters to root controller `params` property for access     in sub controllers   - Replace content of index.html with [ng:view] widget - Create phone list route   - Preserve existing PhoneListCtrl controller   - Move existing html from index.html to partials/phone-list.html - Create phone details route   - Empty placeholder PhoneDetailsCtrl controller   - Empty placeholder partials/phane-details.html template

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2,6 +2,8 @@
 
 body {
   padding-top: 20px;
+  overflow: -moz-scrollbars-vertical;
+  overflow: scroll;
 }
 
 .phones {
@@ -20,4 +22,8 @@ body {
   clear: both;
   height: 100px;
   padding-top: 15px;
+}
+
+.clear-navbar{
+  padding-top: 70px;
 }
