--- a/app/css/app.css
+++ b/app/css/app.css
@@ -12,7 +12,7 @@ body {
 
 .thumb {
   float: left;
-  margin: -1em 1em 1.5em 0em;
+  margin: -1em 1em 1.5em 0;
   padding-bottom: 1em;
   height: 100px;
   width: 100px;
@@ -26,4 +26,65 @@ body {
 
 .clear-navbar{
   padding-top: 70px;
+}
+
+/** Detail View **/
+img.phone {
+  float: left;
+  border: 1px solid gray;
+  margin-right: 3em;
+  margin-bottom: 2em;
+  background-color: white;
+  padding: 2em;
+  height: 400px;
+  width: 400px;
+}
+
+ul.phone-thumbs {
+  margin: 0;
+  list-style: none;
+}
+
+ul.phone-thumbs li {
+  border: 1px solid black;
+  display: inline-block;
+  margin: 1em;
+  background-color: white;
+}
+
+ul.phone-thumbs img {
+  height: 100px;
+  width: 100px;
+  padding: 1em;
+}
+
+ul.specs {
+  clear: both;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+ul.specs > li > div{
+  margin-right: 10px;
+  border-top: 1px solid gray;
+}
+ul.specs > li{
+  display: inline-block;
+  width: 19%;
+  min-width: 180px;
+  vertical-align: top;
+}
+
+ul.specs > li > span{
+  font-weight: bold;
+  font-size: 1.2em;
+  
+}
+
+ul.specs dt {
+  font-weight: bold;
+}
+
+h1 {
+  border-bottom: 1px solid gray;
 }
