--- a/app/partials/phone-detail.html
+++ b/app/partials/phone-detail.html
@@ -55,9 +55,9 @@
           <dt>Bluetooth</dt>
           <dd>{{phone.connectivity.bluetooth}}</dd>
           <dt>Infrared</dt>
-          <dd>{{phone.connectivity.infrared}}</dd>
+          <dd>{{phone.connectivity.infrared | checkmark}}</dd>
           <dt>GPS</dt>
-          <dd>{{phone.connectivity.gps}}</dd>
+          <dd>{{phone.connectivity.gps | checkmark}}</dd>
         </dl>
       </li>
       
@@ -90,7 +90,7 @@
           <dt>Screen resolution</dt>
           <dd>{{phone.display.screenResolution}}</dd>
           <dt>Touch screen</dt>
-          <dd>{{phone.display.touchScreen}}</dd>
+          <dd>{{phone.display.touchScreen | checkmark}}</dd>
         </dl>
       </li>
       <li>
@@ -104,9 +104,9 @@
           <dt>Audio / headphone jack</dt>
           <dd>{{phone.hardware.audioJack}}</dd>
           <dt>FM Radio</dt>
-          <dd>{{phone.hardware.fmRadio}}</dd>
+          <dd>{{phone.hardware.fmRadio | checkmark}}</dd>
           <dt>Accelerometer</dt>
-          <dd>{{phone.hardware.accelerometer}}</dd>
+          <dd>{{phone.hardware.accelerometer | checkmark}}</dd>
         </dl>
       </li>
       <li>
