step-10 image swapping with ng:click
In the phone detail view, clicking on a thumbnail image, changes the
main phone image to be the large version of the thumbnail image.

- Define mainImageUrl model variable in the PhoneDetailCtrl and set its
  default value
- Create setImage controller method to change mainImageUrl
- Register ng:click handler for thumb images to use setImage controller
  method
- Add e2e tests for this feature
- Add css to change the mouse cursor when user points at thumnail images

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -58,6 +58,10 @@ ul.phone-thumbs img {
   padding: 1em;
 }
 
+ul.phone-thumbs img:hover {
+  cursor: pointer;
+}
+
 ul.specs {
   clear: both;
   margin: 0;
