--- a/app/partials/phone-detail.html
+++ b/app/partials/phone-detail.html
@@ -1,7 +1,7 @@
  <div class="container-fluid" >
   <div class="row-fluid clear-navbar">
   <div class="span10 offset1 ">
-    <img ng-src="{{phone.images[0]}}" class="phone">
+    <img ng-src="{{mainImageUrl}}" class="phone">
 
     <h1>{{phone.name}}</h1>
 
@@ -9,7 +9,7 @@
 
     <ul class="phone-thumbs">
       <li ng-repeat="img in phone.images">
-        <img ng-src="{{img}}">
+        <img ng-src="{{img}}" ng-click="setImage(img)">
       </li>
     </ul>
 
