Corrected a misspelled word (weigth => weight)
Line 66 <span> element had 'weight' misspelled

--- a/app/partials/phone-detail.html
+++ b/app/partials/phone-detail.html
@@ -63,7 +63,7 @@
     </dl>
   </li>
   <li>
-    <span>Size and Weigth</span>
+    <span>Size and Weight</span>
     <dl>
       <dt>Dimensions</dt>
       <dd ng-repeat="dim in phone.sizeAndWeight.dimensions">{{dim}}</dd>
