--- a/step-8/app/css/app.css
+++ b/step-8/app/css/app.css
@@ -10,7 +10,7 @@ body {
 
 .thumb {
   float: left;
-  margin: -1em 1em 1.5em 0em;
+  margin: -0.5em 1em 1.5em 0;
   padding-bottom: 1em;
   height: 100px;
   width: 100px;
@@ -18,7 +18,7 @@ body {
 
 .phones li {
   clear: both;
-  height: 100px;
+  height: 115px;
   padding-top: 15px;
 }
 
