--- a/app/partials/phone-list.html
+++ b/app/partials/phone-list.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-2 searchcol">
       <!--Sidebar content-->
 
       Search: <input ng-model="query">
