--- a/app/partials/phone-list.html
+++ b/app/partials/phone-list.html
@@ -4,14 +4,19 @@
       <!--Sidebar content-->
 
       Search: <input ng-model="$ctrl.query">
+      Sort by:
+      <select ng-model="$ctrl.orderProp">
+        <option value="name">Alphabetical</option>
+        <option value="age">Newest</option>
+      </select>
 
     </div>
     <div class="col-md-10">
       <!--Body content-->
 
       <ul class="phones">
-        <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query">
-          {{phone.name}}
+        <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query | orderBy:$ctrl.orderProp">
+          <span>{{phone.name}}</span>
           <p>{{phone.snippet}}</p>
         </li>
       </ul>
