--- a/app/partials/phone-list.html
+++ b/app/partials/phone-list.html
@@ -16,7 +16,7 @@
 
       <ul class="phones">
         <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query | orderBy:$ctrl.orderProp"
-            class="thumbnail">
+            class="thumbnail phone-listing">
           <a href="#/phones/{{phone.id}}" class="thumb">
             <img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}">
           </a>
