--- a/app/css/app.css
+++ b/app/css/app.css
@@ -97,3 +97,14 @@ ul.specs dt {
 h1 {
   border-bottom: 1px solid gray;
 }
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+}
