--- a/app/partials/phone-list.html
+++ b/app/partials/phone-list.html
@@ -3,14 +3,14 @@
     <div class="col-md-2">
       <!--Sidebar content-->
 
-      <label for="search">Search:</label> <input ng-model="query" aria-label="Search" id="search">
+      <label for="search">Search:</label> <input ng-model="query" ng-model-options="{ debounce: 900 }" aria-label="Search" id="search">
       <label for="order">Sort by:</label>
       <select id="order" ng-model="orderProp">
         <option value="name">Alphabetical</option>
         <option value="age">Newest</option>
       </select>
       
-      <div class="aria-status" role="status" aria-live="assertive"></div>
+      <div class="aria-status" aria-live="assertive" aria-atomic="true"></div>
 
     </div>
     <div class="col-md-10">
