--- a/app/css/app.css
+++ b/app/css/app.css
@@ -21,3 +21,16 @@ h1 {
 .navbar.navbar-fixed-bottom {
     border-top: 5px black solid;
 }
+
+.st-sort-ascent:before {
+    content: '\25B2';
+}
+
+.st-sort-descent:before {
+    content: '\25BC';
+}
+
+.st-selected {
+    background: #216eff !important;
+    color: white !important;
+}
