--- a/app/views/profile.view.html
+++ b/app/views/profile.view.html
@@ -1,7 +1,17 @@
-<div ng-controller="ProfileController">
-    <h2>Your Profile</h2>
+<div id="myProfile" ng-controller="ProfileController">
+    <div class="card">
+        <img src="{{currentUser.photoURL}}" alt="photo" style="width:100%">
+        <h1>{{currentUser.displayName}}</h1>
+        <p class="title"><a href="#/bracketList">Bracket Counter: </a></p>
+        <p><strong>ID:</strong> {{currentUser.uid}}
+        </p>
+        <p><strong>Email:</strong> {{currentUser.email}}</p>
 
-    <div>
-        displayName: {{user.displayName}} <br/> email: {{user.email}}<br/> email verified: {{user.emailVerified}}<br/> isAnonymous: {{user.isAnonymous}}<br/> phoneNumber: {{user.phoneNumber}}<br/> qa: {{user.qa}}<br/> refreshToken: {{user.refreshToken}}<br/> uid: {{user.uid}}<br/>
+        <a href="#"><i class="fa fa-dribbble"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <p><button>Edit Profile</button><button ng-click="signOut()">Sign Out</button></p>
+        <p></p>
     </div>
 </div>
